wip -- getting sista integration to work; haven't solved increased memory for sbt